added text searching to wallets
